--- a/refuelking/static/index.css
+++ b/refuelking/static/index.css
@@ -2,7 +2,7 @@
   /*height: 500px;*/
   background-attachment: scroll;
   background-size: cover;
-  background-image: url('/static/img/vintage-gas-station.jpg');
+  background-image: url('img/vintage-gas-station.jpg');
   height: 100vh;
 }
 
