--- a/refuelking/templates/base.html
+++ b/refuelking/templates/base.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="description" lang="de" content="Refuelking findet die güstigste Tankstelle in Ihrer Nähe.">
     <meta name="keywords" lang="de" content="Tankstelle, Tankerkönig, Zapfsäulenkönig, Diesel, Benzin, E10, E5, Auto, tanken">
-    <link rel="stylesheet" href="/static/main.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
     <title>{% block title %}{% endblock %}</title>
-    <link rel="shortcut icon" href="/static/img/gas_station_clipart_white.png">
-    <link rel="icon" type="image/png" href="/static/img/gas_station_clipart_white.png" sizes="32x32">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/gas_station_clipart_white.png') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/gas_station_clipart_white.png') }}" sizes="32x32">
     {% endblock %}
   </head>
   <body>
