--- a/refuelking/templates/search.html
+++ b/refuelking/templates/search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
     {{ super() }}
-    <link rel="stylesheet" href="/static/search.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='search.css') }}" />
     <!-- <script src="http://openlayers.org/en/v3.16.0/build/ol.js" type="text/javascript"></script> -->
     <link rel="stylesheet" href="http://openlayers.org/en/v3.16.0/css/ol.css" type="text/css">
     <script src="http://openlayers.org/en/v3.16.0/build/ol.js"></script>
@@ -27,15 +27,15 @@
         <table>
           <tr>
             <td>{{ "{:,.2f}".format(average_prices[0]) }}&euro;</td>
-            <td><img src="/static/img/e10.png" alt="E10"></td>
+            <td><img src="{{ url_for('static', filename='img/e10.png') }}" alt="E10"></td>
           </tr>
           <tr>
             <td>{{ "{:,.2f}".format(average_prices[1]) }}&euro;</td>
-            <td><img src="/static/img/e5.png" alt="E5"></td>
+            <td><img src="{{ url_for('static', filename='img/e5.png') }}" alt="E5"></td>
           </tr>
           <tr>
             <td>{{ "{:,.2f}".format(average_prices[2]) }}&euro;</td>
-            <td><img src="/static/img/diesel.png" alt="Diesel"></td>
+            <td><img src="{{ url_for('static', filename='img/diesel.png') }}" alt="Diesel"></td>
           </tr>
         </table>
       </div>
@@ -45,15 +45,15 @@
         <table>
           <tr>
             <td>{{ best_time[0] }} Uhr</td>
-            <td><img src="/static/img/e10.png" alt="E10"></td>
+            <td><img src="{{ url_for('static', filename='img/e10.png') }}" alt="E10"></td>
           </tr>
           <tr>
             <td>{{ best_time[1] }} Uhr</td>
-            <td><img src="/static/img/e5.png" alt="E5"></td>
+            <td><img src="{{ url_for('static', filename='img/e5.png') }}" alt="E5"></td>
           </tr>
           <tr>
             <td>{{ best_time[2] }} Uhr</td>
-            <td><img src="/static/img/diesel.png" alt="Diesel"></td>
+            <td><img src="{{ url_for('static', filename='img/diesel.png') }}" alt="Diesel"></td>
           </tr>
         </table>
       </div>
@@ -72,15 +72,15 @@
             <table>
               <tr>
                 <td>{{ station['e10'] }}&euro;</td>
-                <td><img src="/static/img/e10.png" alt="E10">{% if station['top_prices'][0] %} <img src="/static/img/top.png" alt="Günstigster Preis">{% endif %}</td>
+                <td><img src="{{ url_for('static', filename='img/e10.png') }}" alt="E10">{% if station['top_prices'][0] %} <img src="{{ url_for('static', filename='img/top.png') }}" alt="Günstigster Preis">{% endif %}</td>
               </tr>
               <tr>
                 <td>{{ station['e5'] }}&euro;</td>
-                <td><img src="/static/img/e5.png" alt="E5">{% if station['top_prices'][1] %} <img src="/static/img/top.png" alt="Günstigster Preis">{% endif %}</td>
+                <td><img src="{{ url_for('static', filename='img/e5.png') }}" alt="E5">{% if station['top_prices'][1] %} <img src="{{ url_for('static', filename='img/top.png') }}" alt="Günstigster Preis">{% endif %}</td>
               </tr>
               <tr>
                 <td>{{ station['diesel'] }}&euro;</td>
-                <td><img src="/static/img/diesel.png" alt="Diesel">{% if station['top_prices'][2] %} <img src="/static/img/top.png" alt="Günstigster Preis">{% endif %}</td>
+                <td><img src="{{ url_for('static', filename='img/diesel.png') }}" alt="Diesel">{% if station['top_prices'][2] %} <img src="{{ url_for('static', filename='img/top.png') }}" alt="Günstigster Preis">{% endif %}</td>
               </tr>
             </table>
             <!-- <ul>
@@ -106,7 +106,7 @@
         anchor: [0.5, 1],
         anchorXUnits: 'fraction',
         anchorYUnits: 'fraction',
-        src: '/static/img/me_tag.png'
+        src: '{{ url_for('static', filename='img/me_tag.png') }}'
       }))
     });
 
@@ -129,7 +129,7 @@
           anchor: [0.5, 46],
           anchorXUnits: 'fraction',
           anchorYUnits: 'pixels',
-          src: '/static/img/station_tag.png'
+          src: '{{ url_for('static', filename='img/station_tag.png') }}'
         }))
       });
 
