--- a/refuelking/templates/station.html
+++ b/refuelking/templates/station.html
@@ -34,7 +34,7 @@
             </tr>
             <tr>
               <td>{{ station['e5'] }}&euro;</td>
-              <td><img src="{{ url_for('static', filename='img/e5.png' }}" alt="E5"></td>
+              <td><img src="{{ url_for('static', filename='img/e5.png') }}" alt="E5"></td>
             </tr>
             <tr>
               <td>{{ station['diesel'] }}&euro;</td>
