--- a/refuelking/templates/station.html
+++ b/refuelking/templates/station.html
@@ -6,8 +6,8 @@
     <script src="http://www.openstreetmap.org/openlayers/OpenStreetMap.js"></script> -->
     <link rel="stylesheet" href="http://openlayers.org/en/v3.16.0/css/ol.css" type="text/css">
     <script src="http://openlayers.org/en/v3.16.0/build/ol.js"></script>
-    <!-- <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.11.0.min.css" rel="stylesheet" type="text/css"> -->
-    <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.11.0.min.js"></script>
+    <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" rel="stylesheet" type="text/css">
+    <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script> 
     {{ price_plot[0]|safe }}
     <style>
       #OpenLayers_Control_Attribution_7{
