--- a/refuelking/static/station.css
+++ b/refuelking/static/station.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis);
 
 #title{
-  font-size: 5em;
+  font-size: 2.5em;
   padding: 25px;
   background-attachment: scroll;
   background-size: cover;
@@ -24,4 +24,8 @@ table{
 .map {
   height: 400px;
   width: 100%;
+}
+
+.bk-plot-layout{
+  margin: auto;
 }
