--- a/refuelking/templates/index.html
+++ b/refuelking/templates/index.html
@@ -24,6 +24,7 @@ REFUELKING | Welche Tankstelle ist am günstigsten?
        </select>
       <input type="submit" value="Suche">
     </form>
+    <div id="license">Verwendet die <strong><a href="http://www.tankerkoenig.de">Tankerkönig API</a></strong> unter der Creative Commons Lizenz 4.0</div>
   </div>
 </section>
 {% endblock %}
