Cited license correctly.

--- a/refuelking/templates/index.html
+++ b/refuelking/templates/index.html
@@ -24,7 +24,10 @@ REFUELKING | Welche Tankstelle ist am günstigsten?
        </select>
       <input type="submit" value="Suche">
     </form>
-    <div id="license">Verwendet die <strong><a href="http://www.tankerkoenig.de">Tankerkönig API</a></strong> unter der Creative Commons Lizenz 4.0</div>
+    <div id="license">
+      Verwendet wird die <strong><a href="http://www.tankerkoenig.de">Tankerkönig API</a></strong> unter der <strong><a href=" https://creativecommons.org/licenses/by/4.0/deed.de">CC BY 4.0</a></strong> Lizenz.
+      <!-- <br><em>Teile der API-Antworten werden in einer eigenen Datenbank zu Auswertungszwecken zwischengespeichert.</em> -->
+    </div>
   </div>
 </section>
 {% endblock %}
