--- a/refuelking/templates/station.html
+++ b/refuelking/templates/station.html
@@ -72,6 +72,7 @@
     <div id="map" class="map"></div>
   </section>
   <script>
+    // Similar procedure as in search.html, see explanation there.
     var iconFeature = new ol.Feature({
       geometry: new ol.geom.Point(ol.proj.transform([{{ station['lng'] }}, {{ station['lat'] }}], 'EPSG:4326', 'EPSG:3857')),
       name: '{{ station['name'] }}'
