Added viewport settings #1

--- a/refuelking/templates/base.html
+++ b/refuelking/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     {% block head %}
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <meta name="description" lang="de" content="Refuelking findet die güstigste Tankstelle in Ihrer Nähe.">
     <meta name="keywords" lang="de" content="Tankstelle, Tankerkönig, Zapfsäulenkönig, Diesel, Benzin, E10, E5, Auto, tanken">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
