Changed from mapquest to osm

--- a/refuelking/templates/station.html
+++ b/refuelking/templates/station.html
@@ -104,7 +104,7 @@
       layers: [
         new ol.layer.Tile({
           // source: new ol.source.MapQuest({layer: 'sat'})
-          source: new ol.source.MapQuest({layer: 'osm'})
+          source: new ol.source.OSM()
         }), vectorLayer
       ],
       view: new ol.View({
