--- a/refuelking/templates/search.html
+++ b/refuelking/templates/search.html
@@ -143,7 +143,7 @@
       interactions: ol.interaction.defaults({mouseWheelZoom:false}),
       layers: [
         new ol.layer.Tile({
-          source: new ol.source.MapQuest({layer: 'osm'})
+          source: new ol.source.OSM()
         }), vectorLayer
       ],
       view: new ol.View({
